[gd_scene load_steps=11 format=2]

[ext_resource path="res://Items/Bone/Bone.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ted/Ted.tscn" type="PackedScene" id=2]
[ext_resource path="res://Levels/Kitchen/placeholderBackground.png" type="Texture" id=3]
[ext_resource path="res://Levels/Kitchen/NewKitchenTileSet.tres" type="TileSet" id=4]
[ext_resource path="res://Levels/Kitchen/MovingPlatform.tscn" type="PackedScene" id=5]
[ext_resource path="res://HUD/Interface.tscn" type="PackedScene" id=6]
[ext_resource path="res://Levels/Kitchen/Kitchen.gd" type="Script" id=7]
[ext_resource path="res://Audio/BoneCollected.tscn" type="PackedScene" id=8]
[ext_resource path="res://Audio/YouLoseSound.tscn" type="PackedScene" id=9]
[ext_resource path="res://Audio/YouWinSound.tscn" type="PackedScene" id=10]

[node name="Kitchen" type="Node2D"]
script = ExtResource( 7 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Background" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 512, 301 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_custom_transform = Transform2D( 32, 0, 0, 64, 0, 0 )
format = 1
tile_data = PoolIntArray( -262151, 3, 0, -262150, 3, 0, -262149, 3, 0, -262148, 3, 0, -262147, 3, 0, -262146, 3, 0, -262145, 3, 0, -327680, 3, 0, -327679, 3, 0, -327678, 3, 0, -327677, 3, 0, -327676, 3, 0, -327675, 3, 0, -327674, 3, 0, -327673, 3, 0, -327672, 3, 0, -327671, 3, 0, -327670, 3, 0, -327669, 3, 0, -327668, 3, 0, -327667, 3, 0, -327666, 3, 0, -327665, 3, 0, -327664, 3, 0, -327663, 3, 0, -327662, 3, 0, -327661, 3, 0, -327660, 3, 0, -327659, 3, 0, -327658, 3, 0, -327657, 3, 0, -327656, 3, 0, -327655, 3, 0, -327654, 3, 0, -327653, 3, 0, -327652, 3, 0, -327651, 3, 0, -327650, 3, 0, -327649, 3, 0, -327648, 3, 0, -327647, 3, 0, -327646, 3, 0, -327645, 3, 0, -327644, 3, 0, -327643, 3, 0, -327642, 3, 0, -327641, 3, 0, -327640, 3, 0, -327639, 3, 0, -327638, 3, 0, -327637, 3, 0, -327636, 3, 0, -327635, 3, 0, -327634, 3, 0, -327633, 3, 0, -327632, 3, 0, -327631, 3, 0, -327630, 3, 0, -327629, 3, 0, -327628, 3, 0, -327627, 3, 0, -327626, 3, 0, -327625, 3, 0, -327624, 3, 0, -327623, 3, 0, -327622, 3, 0, -327621, 3, 0, -327620, 3, 0, -327619, 3, 0, -327618, 3, 0, -327617, 3, 0, -327616, 3, 0, -327615, 3, 0, -327614, 3, 0, -327613, 3, 0, -327612, 3, 0, -327611, 3, 0, -327610, 3, 0, -327609, 3, 0, -327608, 3, 0, -327607, 3, 0, -327606, 3, 0, -327605, 3, 0, -327604, 3, 0, -327603, 3, 0, -327602, 3, 0, -327601, 3, 0, -327600, 3, 0, -196615, 3, 0, -196614, 3, 0, -196613, 3, 0, -196612, 3, 0, -196611, 3, 0, -196610, 3, 0, -196609, 3, 0, -262144, 3, 0, -262143, 3, 0, -262142, 3, 0, -262141, 3, 0, -262140, 3, 0, -262139, 3, 0, -262138, 3, 0, -262137, 3, 0, -262136, 3, 0, -262135, 3, 0, -262134, 3, 0, -262133, 3, 0, -262132, 3, 0, -262131, 3, 0, -262130, 3, 0, -262129, 3, 0, -262128, 3, 0, -262127, 3, 0, -262126, 3, 0, -262125, 3, 0, -262124, 3, 0, -262123, 3, 0, -262122, 3, 0, -262121, 3, 0, -262120, 3, 0, -262119, 3, 0, -262118, 3, 0, -262117, 3, 0, -262116, 3, 0, -262115, 3, 0, -262114, 3, 0, -262113, 3, 0, -262112, 3, 0, -262111, 3, 0, -262110, 3, 0, -262109, 3, 0, -262108, 3, 0, -262107, 3, 0, -262106, 3, 0, -262105, 3, 0, -262104, 3, 0, -262103, 3, 0, -262102, 3, 0, -262101, 3, 0, -262100, 3, 0, -262099, 3, 0, -262098, 3, 0, -262097, 3, 0, -262096, 3, 0, -262095, 3, 0, -262094, 3, 0, -262093, 3, 0, -262092, 3, 0, -262091, 3, 0, -262090, 3, 0, -262089, 3, 0, -262088, 3, 0, -262087, 3, 0, -262086, 3, 0, -262085, 3, 0, -262084, 3, 0, -262083, 3, 0, -262082, 3, 0, -262081, 3, 0, -262080, 3, 0, -262079, 3, 0, -262078, 3, 0, -262077, 3, 0, -262076, 3, 0, -262075, 3, 0, -262074, 3, 0, -262073, 3, 0, -262072, 3, 0, -262071, 3, 0, -262070, 3, 0, -262069, 3, 0, -262068, 3, 0, -262067, 3, 0, -262066, 3, 0, -262065, 3, 0, -262064, 3, 0, -131079, 3, 0, -131078, 3, 0, -131077, 3, 0, -131076, 3, 0, -131075, 3, 0, -131074, 3, 0, -131073, 3, 0, -196608, 3, 0, -196607, 3, 0, -196606, 3, 0, -196605, 3, 0, -196604, 3, 0, -196603, 3, 0, -196602, 3, 0, -196601, 3, 0, -196600, 3, 0, -196599, 3, 0, -196598, 3, 0, -196597, 3, 0, -196596, 3, 0, -196595, 3, 0, -196594, 3, 0, -196593, 3, 0, -196592, 3, 0, -196591, 3, 0, -196590, 3, 0, -196589, 3, 0, -196588, 3, 0, -196587, 3, 0, -196586, 3, 0, -196585, 3, 0, -196584, 3, 0, -196583, 3, 0, -196582, 3, 0, -196581, 3, 0, -196580, 3, 0, -196579, 3, 0, -196578, 3, 0, -196577, 3, 0, -196576, 3, 0, -196575, 3, 0, -196574, 3, 0, -196573, 3, 0, -196572, 3, 0, -196571, 3, 0, -196570, 3, 0, -196569, 3, 0, -196568, 3, 0, -196567, 3, 0, -196566, 3, 0, -196565, 3, 0, -196564, 3, 0, -196563, 3, 0, -196562, 3, 0, -196561, 3, 0, -196560, 3, 0, -196559, 3, 0, -196558, 3, 0, -196557, 3, 0, -196556, 3, 0, -196555, 3, 0, -196554, 3, 0, -196553, 3, 0, -196552, 3, 0, -196551, 3, 0, -196550, 3, 0, -196549, 3, 0, -196548, 3, 0, -196547, 3, 0, -196546, 3, 0, -196545, 3, 0, -196544, 3, 0, -196543, 3, 0, -196542, 3, 0, -196541, 3, 0, -196540, 3, 0, -196539, 3, 0, -196538, 3, 0, -196537, 3, 0, -196536, 3, 0, -196535, 3, 0, -196534, 3, 0, -196533, 3, 0, -196532, 3, 0, -196531, 3, 0, -196530, 3, 0, -196529, 3, 0, -196528, 3, 0, -65543, 3, 0, -65542, 3, 0, -65541, 3, 0, -65540, 3, 0, -65539, 3, 0, -131012, 7, 0, -131011, 3, 0, -131010, 3, 0, -131009, 3, 0, -131008, 3, 0, -131007, 3, 0, -131006, 3, 0, -131005, 3, 0, -131004, 3, 0, -131003, 3, 0, -131002, 3, 0, -131001, 3, 0, -131000, 3, 0, -130999, 3, 0, -130998, 3, 0, -130997, 3, 0, -130996, 3, 0, -130995, 3, 0, -130994, 3, 0, -130993, 3, 0, -130992, 3, 0, -7, 3, 0, -6, 3, 0, -5, 3, 0, -4, 3, 0, -3, 3, 0, -65476, 7, 0, -65475, 3, 0, -65474, 3, 0, -65473, 3, 0, -65472, 3, 0, -65471, 3, 0, -65470, 3, 0, -65469, 3, 0, -65468, 3, 0, -65467, 3, 0, -65466, 3, 0, -65465, 3, 0, -65464, 3, 0, -65463, 3, 0, -65462, 3, 0, -65461, 3, 0, -65460, 3, 0, -65459, 3, 0, -65458, 3, 0, -65457, 3, 0, -65456, 3, 0, 65529, 3, 0, 65530, 3, 0, 65531, 3, 0, 65532, 3, 0, 65533, 3, 0, 60, 7, 0, 61, 3, 0, 62, 3, 0, 63, 3, 0, 64, 3, 0, 65, 3, 0, 66, 3, 0, 67, 3, 0, 68, 3, 0, 69, 3, 0, 70, 3, 0, 71, 3, 0, 72, 3, 0, 73, 3, 0, 74, 3, 0, 75, 3, 0, 76, 3, 0, 77, 3, 0, 78, 3, 0, 79, 3, 0, 80, 3, 0, 131065, 3, 0, 131066, 3, 0, 131067, 3, 0, 131068, 3, 0, 131069, 3, 0, 65612, 7, 0, 65613, 3, 0, 65614, 3, 0, 65615, 3, 0, 65616, 3, 0, 196601, 3, 0, 196602, 3, 0, 196603, 3, 0, 196604, 3, 0, 196605, 3, 0, 131148, 7, 0, 131149, 3, 0, 131150, 3, 0, 131151, 3, 0, 131152, 3, 0, 262137, 3, 0, 262138, 3, 0, 262139, 3, 0, 262140, 3, 0, 262141, 3, 0, 196668, 6, 0, 196669, 0, 0, 196670, 0, 0, 196671, 0, 0, 196672, 0, 0, 196673, 0, 0, 196674, 0, 0, 196675, 0, 0, 196676, 0, 0, 196677, 4, 0, 196684, 7, 0, 196685, 3, 0, 196686, 3, 0, 196687, 3, 0, 196688, 3, 0, 327673, 3, 0, 327674, 3, 0, 327675, 3, 0, 327676, 3, 0, 327677, 3, 0, 262204, 7, 0, 262205, 3, 0, 262206, 3, 0, 262207, 3, 0, 262208, 3, 0, 262209, 3, 0, 262210, 3, 0, 262211, 3, 0, 262212, 2, 0, 262213, 0, 0, 262214, 4, 0, 262220, 7, 0, 262221, 3, 0, 262222, 3, 0, 262223, 3, 0, 262224, 3, 0, 393209, 3, 0, 393210, 3, 0, 393211, 3, 0, 393212, 3, 0, 393213, 3, 0, 327744, 3, 0, 327745, 3, 0, 327746, 3, 0, 327747, 3, 0, 327748, 3, 0, 327749, 3, 0, 327750, 5, 0, 327756, 7, 0, 327757, 3, 0, 327758, 3, 0, 327759, 3, 0, 327760, 3, 0, 458745, 3, 0, 458746, 3, 0, 458747, 3, 0, 458748, 3, 0, 458749, 3, 0, 393234, 6, 0, 393235, 0, 0, 393236, 4, 0, 393238, 6, 0, 393239, 0, 0, 393240, 4, 0, 393282, 3, 0, 393283, 3, 0, 393284, 3, 0, 393285, 3, 0, 393286, 5, 0, 393292, 7, 0, 393293, 3, 0, 393294, 3, 0, 393295, 3, 0, 393296, 3, 0, 524281, 3, 0, 524282, 3, 0, 524283, 3, 0, 524284, 3, 0, 524285, 3, 0, 458769, 6, 0, 458770, 0, 0, 458771, 1, 0, 458772, 5, 0, 458774, 7, 0, 458775, 2, 0, 458776, 0, 0, 458777, 4, 0, 458819, 7, 0, 458820, 3, 0, 458821, 2, 0, 458822, 0, 0, 458823, 0, 0, 458824, 0, 0, 458825, 0, 0, 458826, 0, 0, 458827, 0, 0, 458828, 0, 0, 458829, 1, 0, 458830, 3, 0, 458831, 3, 0, 458832, 3, 0, 589817, 3, 0, 589818, 3, 0, 589819, 3, 0, 589820, 3, 0, 589821, 2, 0, 589822, 0, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 1, 0, 524307, 3, 0, 524308, 5, 0, 524310, 7, 0, 524311, 3, 0, 524312, 2, 0, 524313, 0, 0, 524314, 4, 0, 524355, 7, 0, 524356, 3, 0, 524357, 3, 0, 524358, 3, 0, 524359, 3, 0, 524360, 3, 0, 524361, 3, 0, 524362, 3, 0, 524363, 3, 0, 524364, 3, 0, 524365, 3, 0, 524366, 3, 0, 524367, 3, 0, 524368, 3, 0, 655353, 3, 0, 655354, 3, 0, 655355, 3, 0, 655356, 3, 0, 655357, 3, 0, 655358, 3, 0, 655359, 3, 0, 589824, 3, 0, 589825, 3, 0, 589826, 3, 0, 589827, 3, 0, 589828, 3, 0, 589829, 3, 0, 589830, 3, 0, 589831, 3, 0, 589832, 3, 0, 589833, 3, 0, 589834, 3, 0, 589835, 3, 0, 589836, 3, 0, 589837, 3, 0, 589838, 3, 0, 589839, 3, 0, 589840, 3, 0, 589841, 3, 0, 589842, 3, 0, 589843, 3, 0, 589844, 5, 0, 589846, 7, 0, 589847, 3, 0, 589848, 3, 0, 589849, 2, 0, 589850, 0, 0, 589851, 4, 0, 589858, 6, 0, 589859, 0, 0, 589860, 0, 0, 589861, 0, 0, 589862, 0, 0, 589863, 0, 0, 589864, 0, 0, 589865, 4, 0, 589891, 7, 0, 589892, 3, 0, 589893, 3, 0, 589894, 3, 0, 589895, 3, 0, 589896, 3, 0, 589897, 3, 0, 589898, 3, 0, 589899, 3, 0, 589900, 3, 0, 589901, 3, 0, 589902, 3, 0, 589903, 3, 0, 589904, 3, 0, 720889, 3, 0, 720890, 3, 0, 720891, 3, 0, 720892, 3, 0, 720893, 3, 0, 720894, 3, 0, 720895, 3, 0, 655360, 3, 0, 655361, 3, 0, 655362, 3, 0, 655363, 3, 0, 655364, 3, 0, 655365, 3, 0, 655366, 3, 0, 655367, 3, 0, 655368, 3, 0, 655369, 3, 0, 655370, 3, 0, 655371, 3, 0, 655372, 3, 0, 655373, 3, 0, 655374, 3, 0, 655375, 3, 0, 655376, 3, 0, 655377, 3, 0, 655378, 3, 0, 655379, 3, 0, 655380, 5, 0, 655382, 7, 0, 655383, 3, 0, 655384, 3, 0, 655385, 3, 0, 655386, 2, 0, 655387, 0, 0, 655388, 4, 0, 655393, 6, 0, 655394, 0, 0, 655395, 1, 0, 655396, 3, 0, 655397, 3, 0, 655398, 3, 0, 655399, 3, 0, 655400, 2, 0, 655401, 0, 0, 655402, 0, 0, 655403, 0, 0, 655404, 0, 0, 655405, 0, 0, 655406, 0, 0, 655407, 0, 0, 655408, 0, 0, 655409, 0, 0, 655410, 0, 0, 655411, 0, 0, 655412, 0, 0, 655413, 0, 0, 655414, 0, 0, 655415, 0, 0, 655416, 0, 0, 655417, 0, 0, 655418, 0, 0, 655419, 0, 0, 655420, 0, 0, 655421, 0, 0, 655422, 0, 0, 655423, 0, 0, 655424, 4, 0, 655427, 7, 0, 655428, 3, 0, 655429, 3, 0, 655430, 3, 0, 655431, 3, 0, 655432, 3, 0, 655433, 3, 0, 655434, 3, 0, 655435, 3, 0, 655436, 3, 0, 655437, 3, 0, 655438, 3, 0, 655439, 3, 0, 655440, 3, 0, 786425, 3, 0, 786426, 3, 0, 786427, 3, 0, 786428, 3, 0, 786429, 3, 0, 786430, 3, 0, 786431, 3, 0, 720896, 3, 0, 720897, 3, 0, 720898, 3, 0, 720899, 3, 0, 720900, 3, 0, 720901, 3, 0, 720902, 3, 0, 720903, 3, 0, 720904, 3, 0, 720905, 3, 0, 720906, 3, 0, 720907, 3, 0, 720908, 3, 0, 720909, 3, 0, 720910, 3, 0, 720911, 3, 0, 720912, 3, 0, 720913, 3, 0, 720914, 3, 0, 720915, 3, 0, 720916, 5, 0, 720921, 3, 0, 720922, 3, 0, 720923, 2, 0, 720924, 0, 0, 720925, 4, 0, 720928, 6, 0, 720929, 0, 0, 720930, 1, 0, 720931, 3, 0, 720932, 3, 0, 720933, 3, 0, 720934, 3, 0, 720935, 3, 0, 720936, 3, 0, 720937, 3, 0, 720938, 3, 0, 720939, 3, 0, 720940, 3, 0, 720941, 3, 0, 720942, 3, 0, 720943, 3, 0, 720944, 3, 0, 720945, 3, 0, 720946, 3, 0, 720947, 3, 0, 720948, 3, 0, 720949, 3, 0, 720950, 3, 0, 720951, 3, 0, 720952, 3, 0, 720953, 3, 0, 720954, 3, 0, 720955, 3, 0, 720956, 3, 0, 720957, 3, 0, 720958, 3, 0, 720962, 6, 0, 720963, 0, 0, 720964, 1, 0, 720965, 3, 0, 720966, 3, 0, 720967, 3, 0, 720968, 3, 0, 720969, 3, 0, 720970, 3, 0, 720971, 3, 0, 720972, 3, 0, 720973, 3, 0, 720974, 3, 0, 720975, 3, 0, 720976, 3, 0, 786438, 3, 0, 786439, 3, 0, 786440, 3, 0, 786441, 3, 0, 786442, 3, 0, 786443, 3, 0, 786444, 3, 0, 786458, 3, 0, 786459, 3, 0, 786460, 2, 0, 786461, 0, 0, 786462, 0, 0, 786463, 0, 0, 786464, 0, 0, 786465, 1, 0, 786466, 3, 0, 786467, 3, 0, 786468, 3, 0, 786469, 3, 0, 786470, 3, 0, 786471, 3, 0, 786472, 3, 0, 786473, 3, 0, 786474, 3, 0, 786475, 3, 0, 786476, 3, 0, 786477, 3, 0, 786478, 3, 0, 786479, 3, 0, 786480, 3, 0, 786481, 3, 0, 786482, 3, 0, 786483, 3, 0, 786484, 3, 0, 786485, 3, 0, 786486, 3, 0, 786487, 3, 0, 786488, 3, 0, 786489, 3, 0, 786490, 3, 0, 786491, 3, 0, 786492, 3, 0, 786493, 3, 0, 786497, 6, 0, 786498, 0, 0, 786499, 1, 0, 786500, 3, 0, 786501, 3, 0, 786502, 3, 0, 786503, 3, 0, 786504, 3, 0, 786505, 3, 0, 786506, 3, 0, 786507, 3, 0, 786508, 3, 0, 786509, 3, 0, 786510, 3, 0, 786511, 3, 0, 786512, 3, 0, 851974, 3, 0, 851975, 3, 0, 851976, 3, 0, 851977, 3, 0, 851978, 3, 0, 851979, 3, 0, 851980, 3, 0, 851995, 3, 0, 851996, 3, 0, 851997, 3, 0, 851998, 3, 0, 851999, 3, 0, 852000, 3, 0, 852001, 3, 0, 852002, 3, 0, 852003, 3, 0, 852004, 3, 0, 852005, 3, 0, 852006, 3, 0, 852007, 3, 0, 852008, 3, 0, 852009, 3, 0, 852010, 3, 0, 852011, 3, 0, 852012, 3, 0, 852013, 3, 0, 852014, 3, 0, 852015, 3, 0, 852016, 3, 0, 852017, 3, 0, 852018, 3, 0, 852019, 3, 0, 852020, 3, 0, 852021, 3, 0, 852022, 3, 0, 852023, 3, 0, 852024, 3, 0, 852025, 3, 0, 852032, 6, 0, 852033, 0, 0, 852034, 1, 0, 852035, 3, 0, 852036, 3, 0, 852037, 3, 0, 852038, 3, 0, 852039, 3, 0, 852040, 3, 0, 852041, 3, 0, 852042, 3, 0, 852043, 3, 0, 852044, 3, 0, 852045, 3, 0, 852046, 3, 0, 852047, 3, 0, 852048, 3, 0, 917510, 3, 0, 917511, 3, 0, 917512, 3, 0, 917513, 3, 0, 917514, 3, 0, 917515, 3, 0, 917516, 3, 0, 917532, 3, 0, 917533, 3, 0, 917534, 3, 0, 917535, 3, 0, 917536, 3, 0, 917537, 3, 0, 917538, 3, 0, 917539, 3, 0, 917540, 3, 0, 917541, 3, 0, 917567, 6, 0, 917568, 0, 0, 917569, 1, 0, 917570, 3, 0, 917571, 3, 0, 917572, 3, 0, 917573, 3, 0, 917574, 3, 0, 917575, 3, 0, 917576, 3, 0, 917577, 3, 0, 917578, 3, 0, 917579, 3, 0, 917580, 3, 0, 917581, 3, 0, 917582, 3, 0, 917583, 3, 0, 917584, 3, 0, 983046, 3, 0, 983047, 3, 0, 983048, 3, 0, 983049, 3, 0, 983050, 3, 0, 983051, 3, 0, 983052, 3, 0, 983102, 6, 0, 983103, 0, 0, 983104, 1, 0, 983105, 3, 0, 983106, 3, 0, 983107, 3, 0, 983108, 3, 0, 983109, 3, 0, 983110, 3, 0, 983111, 3, 0, 983112, 3, 0, 983113, 3, 0, 983114, 3, 0, 983115, 3, 0, 983116, 3, 0, 983117, 3, 0, 983118, 3, 0, 983119, 3, 0, 983120, 3, 0, 1048582, 3, 0, 1048583, 3, 0, 1048584, 3, 0, 1048585, 3, 0, 1048586, 3, 0, 1048587, 3, 0, 1048588, 3, 0, 1048637, 6, 0, 1048638, 0, 0, 1048639, 1, 0, 1048640, 3, 0, 1048641, 3, 0, 1048642, 3, 0, 1048643, 3, 0, 1048644, 3, 0, 1048645, 3, 0, 1048646, 3, 0, 1048647, 3, 0, 1048648, 3, 0, 1048649, 3, 0, 1048650, 3, 0, 1048651, 3, 0, 1048652, 3, 0, 1048653, 3, 0, 1048654, 3, 0, 1048655, 3, 0, 1048656, 3, 0, 1114118, 3, 0, 1114119, 3, 0, 1114120, 3, 0, 1114121, 3, 0, 1114122, 3, 0, 1114123, 3, 0, 1114124, 2, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 0, 0, 1114133, 4, 0, 1114138, 6, 0, 1114139, 0, 0, 1114140, 0, 0, 1114141, 0, 0, 1114142, 0, 0, 1114143, 0, 0, 1114144, 0, 0, 1114145, 4, 0, 1114169, 6, 0, 1114170, 0, 0, 1114171, 0, 0, 1114172, 0, 0, 1114173, 0, 0, 1114174, 1, 0, 1114175, 3, 0, 1114176, 3, 0, 1114177, 3, 0, 1114178, 3, 0, 1114179, 3, 0, 1114180, 3, 0, 1114181, 3, 0, 1114182, 3, 0, 1114183, 3, 0, 1114184, 3, 0, 1114185, 3, 0, 1114186, 3, 0, 1114187, 3, 0, 1114188, 3, 0, 1114189, 3, 0, 1114190, 3, 0, 1114191, 3, 0, 1114192, 3, 0, 1179654, 3, 0, 1179655, 3, 0, 1179656, 3, 0, 1179657, 3, 0, 1179658, 3, 0, 1179659, 3, 0, 1179660, 3, 0, 1179661, 3, 0, 1179662, 3, 0, 1179663, 3, 0, 1179664, 3, 0, 1179665, 3, 0, 1179666, 3, 0, 1179667, 3, 0, 1179668, 2, 0, 1179669, 0, 0, 1179670, 0, 0, 1179671, 0, 0, 1179672, 0, 0, 1179673, 0, 0, 1179674, 0, 0, 1179675, 3, 0, 1179676, 3, 0, 1179677, 3, 0, 1179678, 3, 0, 1179679, 3, 0, 1179680, 2, 0, 1179681, 0, 0, 1179682, 0, 0, 1179683, 0, 0, 1179684, 0, 0, 1179685, 0, 0, 1179686, 0, 0, 1179687, 0, 0, 1179688, 0, 0, 1179689, 0, 0, 1179690, 0, 0, 1179691, 0, 0, 1179692, 0, 0, 1179693, 0, 0, 1179694, 0, 0, 1179695, 0, 0, 1179696, 0, 0, 1179697, 0, 0, 1179698, 0, 0, 1179699, 0, 0, 1179700, 0, 0, 1179701, 0, 0, 1179702, 0, 0, 1179703, 0, 0, 1179704, 0, 0, 1179705, 0, 0, 1179706, 1, 0, 1179707, 3, 0, 1179708, 3, 0, 1179709, 3, 0, 1179710, 3, 0, 1179711, 3, 0, 1179712, 3, 0, 1179713, 3, 0, 1179714, 3, 0, 1179715, 3, 0, 1179716, 3, 0, 1179717, 3, 0, 1179718, 3, 0, 1179719, 3, 0, 1179720, 3, 0, 1179721, 3, 0, 1179722, 3, 0, 1179723, 3, 0, 1179724, 3, 0, 1179725, 3, 0, 1179726, 3, 0, 1179727, 3, 0, 1179728, 3, 0, 1245190, 3, 0, 1245191, 3, 0, 1245192, 3, 0, 1245193, 3, 0, 1245194, 3, 0, 1245195, 3, 0, 1245196, 3, 0, 1245197, 3, 0, 1245198, 3, 0, 1245199, 3, 0, 1245200, 3, 0, 1245201, 3, 0, 1245202, 3, 0, 1245203, 3, 0, 1245204, 3, 0, 1245205, 3, 0, 1245206, 3, 0, 1245207, 3, 0, 1245208, 3, 0, 1245209, 3, 0, 1245210, 3, 0, 1245211, 3, 0, 1245212, 3, 0, 1245213, 3, 0, 1245214, 3, 0, 1245215, 3, 0, 1245216, 3, 0, 1245217, 3, 0, 1245218, 3, 0, 1245219, 3, 0, 1245220, 3, 0, 1245221, 3, 0, 1245222, 3, 0, 1245223, 3, 0, 1245224, 3, 0, 1245225, 3, 0, 1245226, 3, 0, 1245227, 3, 0, 1245228, 3, 0, 1245229, 3, 0, 1245230, 3, 0, 1245231, 3, 0, 1245232, 3, 0, 1245233, 3, 0, 1245234, 3, 0, 1245235, 3, 0, 1245236, 3, 0, 1245237, 3, 0, 1245238, 3, 0, 1245239, 3, 0, 1245240, 3, 0, 1245241, 3, 0, 1245242, 3, 0, 1245243, 3, 0, 1245244, 3, 0, 1245245, 3, 0, 1245246, 3, 0, 1245247, 3, 0, 1245248, 3, 0, 1245249, 3, 0, 1245250, 3, 0, 1245251, 3, 0, 1245252, 3, 0, 1245253, 3, 0, 1245254, 3, 0, 1245255, 3, 0, 1245256, 3, 0, 1245257, 3, 0, 1245258, 3, 0, 1245259, 3, 0, 1245260, 3, 0, 1245261, 3, 0, 1245262, 3, 0, 1310726, 3, 0, 1310727, 3, 0, 1310728, 3, 0, 1310729, 3, 0, 1310730, 3, 0, 1310731, 3, 0, 1310732, 3, 0, 1310733, 3, 0, 1310734, 3, 0, 1310735, 3, 0, 1310736, 3, 0, 1310737, 3, 0, 1310738, 3, 0, 1310739, 3, 0, 1310740, 3, 0, 1310741, 3, 0, 1310742, 3, 0, 1310743, 3, 0, 1310744, 3, 0, 1310745, 3, 0, 1310746, 3, 0, 1310747, 3, 0, 1310748, 3, 0, 1310749, 3, 0, 1310750, 3, 0, 1310751, 3, 0, 1310752, 3, 0, 1310753, 3, 0, 1310754, 3, 0, 1310755, 3, 0, 1310756, 3, 0, 1310757, 3, 0, 1310758, 3, 0, 1310759, 3, 0, 1310760, 3, 0, 1310761, 3, 0, 1310762, 3, 0, 1310763, 3, 0, 1310764, 3, 0, 1310765, 3, 0, 1310766, 3, 0, 1310767, 3, 0, 1310768, 3, 0, 1310769, 3, 0, 1310770, 3, 0, 1310771, 3, 0, 1310772, 3, 0, 1310773, 3, 0, 1310774, 3, 0, 1310775, 3, 0, 1310776, 3, 0, 1310777, 3, 0, 1310778, 3, 0, 1310779, 3, 0, 1310780, 3, 0, 1310781, 3, 0, 1310782, 3, 0, 1310783, 3, 0, 1310784, 3, 0, 1310785, 3, 0, 1310786, 3, 0, 1310787, 3, 0, 1310788, 3, 0, 1310789, 3, 0, 1310790, 3, 0, 1310791, 3, 0, 1310792, 3, 0, 1310793, 3, 0, 1310794, 3, 0, 1310795, 3, 0, 1310796, 3, 0, 1310797, 3, 0, 1376261, 3, 0, 1376262, 3, 0, 1376263, 3, 0, 1376264, 3, 0, 1376265, 3, 0, 1376266, 3, 0, 1376267, 3, 0, 1376268, 3, 0, 1376269, 3, 0, 1376270, 3, 0, 1376271, 3, 0, 1376272, 3, 0, 1376273, 3, 0, 1376274, 3, 0, 1376275, 3, 0, 1376276, 3, 0, 1376277, 3, 0, 1376278, 3, 0, 1376279, 3, 0, 1376280, 3, 0, 1376281, 3, 0, 1376282, 3, 0, 1376283, 3, 0, 1376284, 3, 0, 1376285, 3, 0, 1376286, 3, 0, 1376287, 3, 0, 1376288, 3, 0, 1376289, 3, 0, 1376290, 3, 0, 1376291, 3, 0, 1376292, 3, 0, 1376293, 3, 0, 1376294, 3, 0, 1376295, 3, 0, 1376296, 3, 0, 1376297, 3, 0, 1376298, 3, 0, 1376299, 3, 0, 1376300, 3, 0, 1376301, 3, 0, 1376302, 3, 0, 1376303, 3, 0, 1376304, 3, 0, 1376305, 3, 0, 1376306, 3, 0, 1376307, 3, 0, 1376308, 3, 0, 1376309, 3, 0, 1376310, 3, 0, 1376311, 3, 0, 1376312, 3, 0, 1376313, 3, 0, 1376314, 3, 0, 1376315, 3, 0, 1376316, 3, 0, 1376317, 3, 0, 1376318, 3, 0, 1376319, 3, 0, 1376320, 3, 0, 1376321, 3, 0, 1376322, 3, 0, 1376323, 3, 0, 1376324, 3, 0, 1376325, 3, 0, 1376326, 3, 0, 1376327, 3, 0, 1376328, 3, 0, 1376329, 3, 0, 1376330, 3, 0, 1376331, 3, 0, 1441797, 3, 0, 1441798, 3, 0, 1441799, 3, 0, 1441800, 3, 0, 1441801, 3, 0, 1441802, 3, 0, 1441803, 3, 0, 1441804, 3, 0, 1441805, 3, 0, 1441806, 3, 0, 1441807, 3, 0, 1441808, 3, 0, 1441809, 3, 0, 1441810, 3, 0, 1441811, 3, 0, 1441812, 3, 0, 1441813, 3, 0, 1441814, 3, 0, 1441815, 3, 0, 1441816, 3, 0, 1441817, 3, 0, 1441818, 3, 0, 1441819, 3, 0, 1441820, 3, 0, 1441821, 3, 0, 1441822, 3, 0, 1441823, 3, 0, 1441824, 3, 0, 1441825, 3, 0, 1441826, 3, 0, 1441827, 3, 0, 1441828, 3, 0, 1441829, 3, 0, 1441830, 3, 0, 1441831, 3, 0, 1441832, 3, 0, 1441833, 3, 0, 1441834, 3, 0, 1441835, 3, 0, 1441836, 3, 0, 1441837, 3, 0, 1441838, 3, 0, 1441839, 3, 0, 1441840, 3, 0, 1441841, 3, 0, 1441842, 3, 0, 1441843, 3, 0, 1441844, 3, 0, 1441845, 3, 0, 1441846, 3, 0, 1441847, 3, 0, 1441848, 3, 0, 1441849, 3, 0, 1441850, 3, 0, 1441851, 3, 0, 1441852, 3, 0, 1441853, 3, 0, 1441854, 3, 0, 1441855, 3, 0, 1441856, 3, 0, 1441857, 3, 0, 1441858, 3, 0, 1441859, 3, 0, 1441860, 3, 0, 1441861, 3, 0, 1441862, 3, 0, 1441863, 3, 0, 1441864, 3, 0, 1441865, 3, 0, 1507367, 3, 0, 1507368, 3, 0, 1507369, 3, 0, 1507370, 3, 0, 1507371, 3, 0, 1507372, 3, 0, 1507373, 3, 0, 1507374, 3, 0, 1507375, 3, 0 )

[node name="Bone" parent="." instance=ExtResource( 1 )]
position = Vector2( 829.087, 102.2 )

[node name="Bone2" parent="." instance=ExtResource( 1 )]
position = Vector2( -58.8342, 446.142 )

[node name="Bone3" parent="." instance=ExtResource( 1 )]
position = Vector2( 1385.63, 265.772 )

[node name="Bone15" parent="." instance=ExtResource( 1 )]
position = Vector2( 1377.64, 677.767 )

[node name="Bone4" parent="." instance=ExtResource( 1 )]
position = Vector2( 1154.31, 389.668 )

[node name="Bone5" parent="." instance=ExtResource( 1 )]
position = Vector2( 1985.45, 704.57 )

[node name="Bone6" parent="." instance=ExtResource( 1 )]
position = Vector2( 2413.92, 420.642 )

[node name="Bone7" parent="." instance=ExtResource( 1 )]
position = Vector2( 2873.37, 523.889 )

[node name="Bone8" parent="." instance=ExtResource( 1 )]
position = Vector2( 3866.15, 898.971 )

[node name="Bone9" parent="." instance=ExtResource( 1 )]
position = Vector2( 932.333, 1024.64 )

[node name="Bone10" parent="." instance=ExtResource( 1 )]
position = Vector2( 3183.11, 549.389 )

[node name="Bone11" parent="." instance=ExtResource( 1 )]
position = Vector2( 3626.65, 516.543 )

[node name="Bone12" parent="." instance=ExtResource( 1 )]
position = Vector2( 3390.1, 516.543 )

[node name="Bone13" parent="." instance=ExtResource( 1 )]
position = Vector2( 3966.5, 128.145 )

[node name="Bone14" parent="." instance=ExtResource( 1 )]
position = Vector2( 3057.92, 983.272 )

[node name="Bone16" parent="." instance=ExtResource( 1 )]
position = Vector2( 4870.58, 387.503 )

[node name="MovingPlatform" parent="." instance=ExtResource( 5 )]
position = Vector2( 835.056, 401.518 )

[node name="MovingPlatform2" parent="." instance=ExtResource( 5 )]
position = Vector2( 1387.14, 965.165 )
move_to = Vector2( 0, -512 )

[node name="MovingPlatform3" parent="." instance=ExtResource( 5 )]
position = Vector2( 3757.74, 558.455 )
move_to = Vector2( 0, -512 )

[node name="Ted" parent="." instance=ExtResource( 2 )]
position = Vector2( 516, 62 )

[node name="Camera2D" type="Camera2D" parent="Ted"]
position = Vector2( 7.39258, 0 )
current = true
limit_left = -200
limit_right = 5400
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="Interface" parent="CanvasLayer" instance=ExtResource( 6 )]
pause_mode = 2

[node name="BoneCollected" parent="." instance=ExtResource( 8 )]

[node name="YouLoseSound" parent="." instance=ExtResource( 9 )]

[node name="YouWinSound" parent="." instance=ExtResource( 10 )]
[connection signal="bone_collected" from="Bone" to="." method="_on_Bone_bone_collected"]
[connection signal="bone_collected" from="Bone2" to="." method="_on_Bone_bone_collected"]
[connection signal="bone_collected" from="Bone3" to="." method="_on_Bone_bone_collected"]
[connection signal="bone_collected" from="Bone15" to="." method="_on_Bone_bone_collected"]
[connection signal="bone_collected" from="Bone4" to="." method="_on_Bone_bone_collected"]
[connection signal="bone_collected" from="Bone5" to="." method="_on_Bone_bone_collected"]
[connection signal="bone_collected" from="Bone6" to="." method="_on_Bone_bone_collected"]
[connection signal="bone_collected" from="Bone7" to="." method="_on_Bone_bone_collected"]
[connection signal="bone_collected" from="Bone8" to="." method="_on_Bone_bone_collected"]
[connection signal="bone_collected" from="Bone9" to="." method="_on_Bone_bone_collected"]
[connection signal="bone_collected" from="Bone10" to="." method="_on_Bone_bone_collected"]
[connection signal="bone_collected" from="Bone11" to="." method="_on_Bone_bone_collected"]
[connection signal="bone_collected" from="Bone12" to="." method="_on_Bone_bone_collected"]
[connection signal="bone_collected" from="Bone13" to="." method="_on_Bone_bone_collected"]
[connection signal="bone_collected" from="Bone14" to="." method="_on_Bone_bone_collected"]
[connection signal="bone_collected" from="Bone16" to="." method="_on_Bone_bone_collected"]
[connection signal="pause_game" from="Ted" to="." method="_on_Ted_pause_game"]
[connection signal="pause_game" from="Ted" to="CanvasLayer/Interface" method="_on_Ted_pause_game"]
[connection signal="time_out_external" from="CanvasLayer/Interface" to="." method="_on_Interface_time_out_external"]
[connection signal="unpause_external" from="CanvasLayer/Interface" to="." method="_on_Interface_unpause_external"]
